<resources>
    <string name="app_name">Megapet</string>
    <string name="app_version" translatable="false">Alpha 1.3</string>
    <string name="title_home">主頁</string>
    <string name="title_dashboard">會員</string>
    <string name="title_notifications">網店</string>
    <string name="title_payment">積分</string>
    <string name="title_menu">更多</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account_delivery_address">FLAT/RM 1309 BLK B2 13/F \n
        YAU TONG IND CITY 九龍城,\n
        - 中國香港特別行政區 \n
        T: 93440729</string>


    <!--menu-->
    <string name="confirm_logout_text">你確定要從此裝置登出嗎?</string>
    <string name="logout_successful">你已成功登出</string>
    <!-- Menu item -->
    <string name="menu_title_account">我的帳戶</string>
    <string name="menu_title_language">切換語言</string>
    <string name="menu_title_logout">登出</string>
    <string name="menu_title_version">目前版本</string>

    <string name="menu_desc_account">登入或登記會員</string>
    <string name="menu_desc_account_is_login">登入或登記會員</string>
    <string name="menu_desc_language">切換為英文介面</string>
    <string name="menu_desc_logout">從此裝置登出帳戶</string>
    <string name="menu_desc_version">Alpha 1.0</string>

    <!-- login -->
    <string name="login_email_hint">電郵或手提電話</string>
    <string name="login_password_hint">密碼</string>
    <string name="login_email_error_hint">請填上電郵或手提電話</string>
    <string name="login_password_error_hint">請填上密碼</string>
    <string name="login_failure_message_title">系統訊息</string>
    <string name="login_failure_message_desc">登入失敗, 請確認你輸入的電郵或密碼正確</string>
    <string name="login_submit_btn_text">登入</string>
    <!-- dashboard -->
    <string name="dashboard_welcome_title">歡迎回來!</string>
    <string name="dashboard_welcome_desc">使用您的電子郵件地址登錄</string>
    <!-- my account -->
    <string name="my_account_top_title">我的賬戶</string>
    <string name="my_account_title">賬戶信息</string>
    <string name="my_account_point_bal_title">當前積分餘額:</string>
    <string name="my_account_phone_title">電話:</string>
    <string name="my_account_edit_password_title">更改密碼</string>
    <!-- edit info -->
    <string name="edit_info_title">修改帳戶信息</string>
    <string name="edit_info_firstname_hint">名稱*</string>
    <string name="edit_info_lastname_hint">姓氏*</string>
    <string name="edit_info_phone_hint">手提電話*</string>
    <string name="edit_info_failure_message_title">系統訊息</string>
    <string name="edit_info_failure_message_desc">姓氏或名稱不能為空</string>
    <string name="edit_info_submit_btn_text">儲存</string>
    <string name="edit_info_successful">修改賬戶信息成功</string>
        <string name="send_otp_request_successful">驗證碼已傳送至你的電話</string>
        <string name="send_otp_request_error_400">此手提電話已被使用</string>
        <string name="send_otp_request_error_403">超出驗證次數上限，請在15分鐘再試</string>
        <string name="send_otp_request_error_503">驗證碼傳送失敗</string>
        <string name="verify_otp_successful">驗證成功</string>
        <string name="verify_otp_error">驗證失敗，驗證碼不正確或已過期</string>
    <!--edit password-->
    <string name="edit_password_title">更改密碼</string>
    <string name="edit_password_current_password_hint">現時密碼</string>
    <string name="edit_password_new_password_hint">新密碼</string>
    <string name="edit_password_confirm_password_hint">確認新密碼</string>
    <string name="edit_password_password_error_hint">新密碼長度必須等於或大於6個字符,密碼與確認密碼必須相同</string>
    <string name="edit_password_submit_btn_text">儲存</string>
    <string name="edit_password_successful">修改密碼成功</string>
    <string name="edit_password_current_password_error_hint">現時密碼不正確</string>

    <!--register selection-->
        <string name="register_selection_email_btn_text">以電子郵件登記</string>
        <string name="register_selection_phone_btn_text">以手提電話登記</string>
        <string name="register_selection_phone_hint">*以電話登記需要通過SMS驗證</string>

    <!--register-->
    <string name="register_welcome_title">你好!</string>
    <string name="register_welcome_desc">立即成為會員盡享現有禮遇</string>
    <string name="register_email_hint">電郵*</string>
    <string name="register_email_error_hint">請填上正確的電郵</string>
    <string name="register_firstname_hint">名稱*</string>
    <string name="register_firstname_error_hint">請檢查名稱是否輸入正確</string>
    <string name="register_lastname_hint">姓氏*</string>
    <string name="register_lastname_error_hint">請檢查姓氏是否輸入正確</string>
    <string name="register_phone_hint">手提電話*</string>
    <string name="register_phone_error_hint">請輸入正確的手提電話</string>
        <string name="register_email_hint_optional">電郵(選填)</string>
        <string name="register_phone_hint_optional">手提電話(選填)</string>

    <string name="register_password_hint">密碼*</string>
    <string name="register_confirm_password_hint">確認密碼*</string>
    <string name="register_password_error_hint">密碼長度必須等於或大於6個字符</string>
    <string name="register_confirm_password_error_hint">密碼與確認密碼必須相同</string>

    <string name="register_agree_checkbox_error_hint">你必須同意條款及細則才能繼續</string>

    <string name="register_success_201">註冊成功</string>
    <string name="register_error_400">此電郵地址已被使用</string>
        <string name="register_error_401">此電話號碼已被使用</string>
    <string name="register_error_503">網絡錯誤 請稍後再試</string>


    <string name="register_btn_text"><u>按此立即登記成為會員</u></string>
    <string name="forget_password_text"><u>忘記密碼?</u></string>

    <string name="register_i_agree_text">勾選此項即表示閣下同意Megapet APP之\n條款及細則</string>
    <string name="register_submit_btn_text">註冊</string>


    <!-- forgot password -->
    <string name="forget_password_title">忘記密碼</string>
    <string name="forget_password_desc">請輸入你登記的電郵或手提電話，\n我們會把重設密碼的指示以你所選的方法通知給你</string>
    <string name="forget_password_submit_btn">確定</string>
        <string name="forget_password_email_radio_text">以電郵傳送</string>
        <string name="forget_password_phone_radio_text">以SMS傳送</string>
        <string name="forget_password_email_hint">電郵</string>
        <string name="forget_password_phone_hint">手提電話</string>
        <string name="forget_password_phone_required_text">*必須已通過SMS驗證才能使用</string>
        <string name="forget_password_successful">我們已把重設密碼的指示以你所選的方法通知給你</string>
    <!-- point history -->
    <string name="member_point_history_title">可用積分記錄</string>
    <string name="member_point_history_member_id_title">會員編號</string>
    <string name="member_point_history_amount_title">" 積分 "</string>
    <string name="member_point_history_expire_on_title">到期日</string>
    <string name="no_point_history_text">暫無可用積分記錄</string>

    <!-- member card -->
    <string name="member_card_member_id_title">會員編號:</string>
    <string name="member_card_count_down_hint">此QR code將於 %1$s 秒後失效</string>
    <string name="member_card_count_down_expire_hint">此QR code已失效. 請擊點QR code刷新.</string>

    <!--terms&conditions-->
    <string name="terms_conditions_text"><b>會員條款及細則</b>\n
    本會會員優惠將不時更改，且不另行通知，會員請自行留意本公司的會員優惠。\n本會保留更改使用條款的權利而無須另行通知，並保留任何爭議最終決定權。\n申請人的個人資料絕對安全及保密，有關資料將用作本會行政及為會員提供服務之用途。\n\n\n
    <b>Membership Terms &amp; Conditions</b>\n
    •	Benefits or discounts are subject to change without notice. Members should pay attention to  Members Benefits.\n
    •	Megapet Ltd. reserves the right to adjust the terms and conditions without prior notice. All matters and disputes are subject to the final decision of Megapet Ltd.\n
    •	Personal information of applicant will be kept confidential and used for administration and promotion only.\n
        </string>


    <!--misc.-->
    <string name="marquee_text">會員60日內消費折實滿$3000,連同正單到分店可換領$100 Ecoupon.會員購物享9折優惠(特價貨品除外).購物滿$100即送$5 Ecoupon.消費滿HKD$500免費送貨,需受條款及細則約束. 詳情請向分店職員查詢.(電話: 26260406)</string>

    <string name="online_shop_website">https://www.megapet.com.hk/stores/store/redirect/___store/hk/</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <!--    <string name="home_banner_url_11">https://www.megapet.com.hk/media/1/740x400_fourflax.jpg</string> -->
    <string name="home_banner_url_1">https://www.megapet.com.hk/pub/media/app/1.jpg</string>
    <string name="home_banner_url_2">https://www.megapet.com.hk/pub/media/app/2.jpg</string>
    <string name="home_banner_url_3">https://www.megapet.com.hk/pub/media/app/3.jpg</string>
    <string name="home_banner_url_4">https://www.megapet.com.hk/pub/media/app/4.jpg</string>
    <string name="home_banner_url_5">https://www.megapet.com.hk/pub/media/app/5.jpg</string>
    <string name="home_banner_url_6">https://www.megapet.com.hk/pub/media/app/6.jpg</string>
    <string name="home_banner_url_7">https://www.megapet.com.hk/pub/media/app/7.jpg</string>
    <string name="home_banner_url_8">https://www.megapet.com.hk/pub/media/app/8.jpg</string>
    <string name="home_banner_url_9">https://www.megapet.com.hk/pub/media/app/9.jpg</string>
    <string name="home_banner_url_10">https://www.megapet.com.hk/pub/media/app/10.jpg</string>
    <string name="home_banner_url_11">https://www.megapet.com.hk/pub/media/app/11.jpg</string>
    <string name="home_banner_url_12">https://www.megapet.com.hk/pub/media/app/12.jpg</string>
    <string name="home_banner_url_13">https://www.megapet.com.hk/pub/media/app/13.jpg</string>
    <string name="home_banner_url_14">https://www.megapet.com.hk/pub/media/app/14.jpg</string>
    <string name="home_banner_url_15">https://www.megapet.com.hk/pub/media/app/15.jpg</string>


    <!--language preference-->
    <string name="localeCode" translatable="false" />
    <string name="register">註冊</string>
    <string name="login">登入</string>
    <string name="forget_password_or_desc">或</string>

    <string name="get_otp_btn">獲得驗証碼</string>
    <string name="verify_otp_title">驗證碼*</string>
    <string name="verify_otp_btn">驗証</string>
    <string name="otp_section_title">此帳戶的手提電話號碼還未經驗證，請輸入正確的手提電話號碼，並獲取驗證碼短訊，然後進行驗證。</string>
    <string name="register_otp_error_hint">請輸入驗證碼</string>

</resources>