<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- id = fragment's id = nav id -->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24_white"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_memberPaymentScanFragment"
        android:icon="@drawable/ic_baseline_monetization_on_24_white"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/placeholder"
        android:title="" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_pets_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_baseline_more_horiz_24_white"
        android:title="@string/title_menu" />

</menu>