<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_repeat_2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.member.RegisterSelectionFragment">


    <Button
        android:id="@+id/register_select_email_btn"
        style="@style/large_button.register_selection"
        android:text="@string/register_selection_email_btn_text" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register_select_phone_btn"
            style="@style/large_button.register_selection"
            android:text="@string/register_selection_phone_btn_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/register_selection_phone_hint" />

    </FrameLayout>


</LinearLayout>